# env-code-agent-2

./: .env.example  DESIGN_AGENTIC.md  README.md  package.json  requirements.txt
examples/: realworld-conduit-spec.json
output-realworld/cloned-env/: .dockerignore  .gitignore  API_DOCUMENTATION.md  Dockerfile  mprocs.yaml  package.json
output-realworld/cloned-env/.github/workflows/: deploy.yml
output-realworld/cloned-env/data/: schema.sql
output-realworld/cloned-env/mcp/: README.md  pyproject.toml
output-realworld/cloned-env/mcp/src/realworld_mcp/: __init__.py  client.py  server.py
output-realworld/cloned-env/server/: package.json  tsconfig.json
output-realworld/cloned-env/server/src/: index.ts
output-realworld/cloned-env/server/src/lib/: auth.ts  db.ts  utils.ts
output-realworld/cloned-env/server/src/routes/: articles.ts  comments.ts  favorites.ts  profiles.ts  tags.ts  user.ts  users.ts
src/: cli.py  cli.ts
src/agents/: code-generator-agent.ts  code_generator_agent.py  exploration-agent.ts  spec_ingestion_agent.py  specification-agent.ts
src/core/: base-agent.ts  llm-client.ts  orchestrator.ts
src/tools/: tool-definitions.ts  tool-executor.ts
